@@ -28,6 +28,9 @@ Version 2.10.0
   + Add support for new AMD CPUID leaf 0x80000026 for better detection
     of Core Complex and Die on Zen4 processors.
   + Improve Zhaoxin topology detection in the x86 backend.
+* Tools
+  + Add --children-of-pid to hwloc-ps to show a hierarchy of processes.
+    Thanks to Antoine Morvan for the suggestion.
 * Misc
   + lstopo may now configure the layout of memory object placed above,
     for instance with --children-order memory:above:vert.
